<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".DisplayMap">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintDimensionRatio="1:1">

        <com.mapper.imuslam.ZoomPanLayout
            android:id="@+id/root_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clipChildren="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="Map image"
                android:scaleType="fitXY"
                tools:srcCompat="@drawable/new_map" />
        </com.mapper.imuslam.ZoomPanLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/coordinates"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/stepsDistanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Total_Distance"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/clickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Click_Photo"
            style="@style/MyCustomButtonStyle"
            android:layout_marginEnd="24dp" />
        <Button
            android:id="@+id/endMap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            style="@style/MyCustomButtonStyle"
            android:text="@string/End_Map" />
    </LinearLayout>

    <Button
        android:id="@+id/resetZoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/MyCustomButtonStyle"
        android:text="@string/Reset_Zoom"
        android:visibility="gone"
        tools:visibility="visible"/>
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:text="@string/Please_Move_your_Device"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="Calibration animation" />

    <FrameLayout
        android:id="@+id/ar_fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>